--- a/packages/website/src/app/globals.scss
+++ b/packages/website/src/app/globals.scss
@@ -79,6 +79,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /* For Firefox */
 input[type="number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
 }
 
