--- a/packages/new-website/src/layouts/Layout.astro
+++ b/packages/new-website/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
+import Nav from "../components/Nav.astro";
+
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,43 +10,123 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Nav />
+    <slot />
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+<style is:global lang="scss">
+  :root {
+    --primary-color: #ff0066;
+    --secondary-color: #00ff99;
+    --bg-color: #13151a;
+    --font-color: #fff;
+    --font-color-90: color-mix(in srgb, var(--font-color) 90%, transparent);
+    --font-color-50: color-mix(in srgb, var(--font-color) 50%, transparent);
+    --font-color-10: color-mix(in srgb, var(--font-color) 10%, transparent);
+
+    --semi-bold: 600;
+    --bold: 700;
+
+    --border-radius: 0.25rem;
+    --border-radius-lg: 0.5rem;
+  }
+  [data-theme="light"] {
+    --bg-color: #fff;
+    --font-color: #000;
+  }
+  html {
+    color-scheme: light dark;
+    font-family: system-ui, sans-serif;
+    background: var(--bg-color);
+    color: var(--font-color);
+  }
+  ul,
+  ol,
+  li,
+  button,
+  a {
+    all: unset;
+  }
+  .button {
+    cursor: pointer;
+    display: flex;
+    width: min-content;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 0.5em;
+    padding: 0.375rem 0.75rem;
+    border-radius: var(--border-radius);
+    transition: all 0.2s ease-in-out;
+
+    &--icon {
+      font-size: 1.5rem;
+    }
+    &--text {
+      font-size: 0.875rem;
+      font-weight: var(--semi-bold);
+      text-wrap: nowrap;
+    }
+    &--primary {
+      background: var(--primary-color);
+      color: black;
+      &:hover {
+        background: color-mix(in srgb, var(--primary-color) 100%, white 25%);
+      }
+    }
+    &--secondary {
+      background: transparent;
+      color: var(--font-color);
+      border: 0.0625rem solid var(--font-color-50);
+      &:hover {
+        background: color-mix(in srgb, var(--font-color) 25%, transparent);
+        color: var(--font-color);
+      }
+    }
+    &--without-text {
+      @extend .button--secondary;
+      border: transparent;
+      padding: 0.375rem;
+    }
+  }
+  .loader {
+    position: relative;
+    overflow: hidden;
+    border-radius: var(--border-radius);
+    &::before {
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      border-top: 1rem solid var(--font-color-50);
+      filter: blur(1rem);
+      animation: spin 1s linear infinite;
+      z-index: 2;
+    }
+    @keyframes spin {
+      0% {
+        transform: translate(75%, 75%);
+      }
+      100% {
+        transform: translate(-75%, -75%);
+      }
+    }
+  }
 </style>
