--- a/packages/new-website/src/layouts/Layout.astro
+++ b/packages/new-website/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -37,15 +37,22 @@ const { title } = Astro.props;
     --font-color-50: color-mix(in srgb, var(--font-color) 50%, transparent);
     --font-color-10: color-mix(in srgb, var(--font-color) 10%, transparent);
 
+    --regular: 400;
     --semi-bold: 600;
     --bold: 700;
 
+    --max-width: 1200px;
     --border-radius: 0.25rem;
     --border-radius-lg: 0.5rem;
   }
   [data-theme="light"] {
     --bg-color: #fff;
     --font-color: #000;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
   html {
     color-scheme: light dark;
@@ -65,6 +72,7 @@ const { title } = Astro.props;
     display: flex;
     width: min-content;
     flex-wrap: nowrap;
+    flex-shrink: 0;
     align-items: center;
     gap: 0.5em;
     padding: 0.375rem 0.75rem;
@@ -128,5 +136,22 @@ const { title } = Astro.props;
         transform: translate(-75%, -75%);
       }
     }
+  }
+  // SECTION TEXT STYLES
+  h1 {
+    all: unset;
+    display: block;
+    text-wrap: pretty;
+    font-size: 3rem;
+    font-weight: var(--bold);
+    line-height: 1;
+  }
+  h2 {
+    all: unset;
+    display: block;
+    text-wrap: pretty;
+    font-size: 1.5rem;
+    font-weight: var(--semi-bold);
+    line-height: 1.5;
   }
 </style>
