--- a/packages/new-website/src/layouts/Layout.astro
+++ b/packages/new-website/src/layouts/Layout.astro
@@ -78,7 +78,7 @@ const { title } = Astro.props;
     padding: 0.375rem 0.75rem;
     border-radius: var(--border-radius);
     transition: all 0.2s ease-in-out;
-
+    text-wrap: nowrap;
     &--icon {
       font-size: 1.5rem;
     }
@@ -150,8 +150,15 @@ const { title } = Astro.props;
     all: unset;
     display: block;
     text-wrap: pretty;
-    font-size: 1.5rem;
-    font-weight: var(--semi-bold);
+    font-size: 1.75rem;
+    font-weight: var(--bold);
+    line-height: 1.5;
+  }
+  p {
+    all: unset;
+    display: block;
+    text-wrap: pretty;
+    font-size: 1.125rem;
     line-height: 1.5;
   }
 </style>
