--- a/packages/new-website/src/components/Tag.astro
+++ b/packages/new-website/src/components/Tag.astro
@@ -18,7 +18,8 @@ const { type, text, class: className } = Astro.props;
     box-shadow: 0 5px 1rem var(--font-color-50);
     color: black;
     &--small {
-      padding: 0.25rem 0.5rem;
+      padding: 0.15rem 0.5rem;
+      font-size: 0.875rem;
       font-weight: var(--semi-bold);
       border-radius: var(--border-radius);
     }
