feat(web): :sparkles: added Contribution Section

--- a/packages/new-website/src/pages/index.astro
+++ b/packages/new-website/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Contributions from "../components/Landing/Contributions.astro";
 import Feacture from "../components/Landing/Feacture.astro";
 import Hero from "../components/Landing/Hero.astro";
 import Layout from "../layouts/Layout.astro";
@@ -7,6 +8,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Welcome to Beatriz Dono">
   <main>
     <Hero />
+    <Contributions />
     <Feacture title="Gestión de colores" image="/assets/feacture_color.png">
       <p>
         Con Beatriz~Dono, puedes personalizar el color de tu nickname con más de <span
