--- a/packages/new-website/src/pages/index.astro
+++ b/packages/new-website/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Contributions from "../components/Landing/Contributions.astro";
 import Feacture from "../components/Landing/Feacture.astro";
 import Hero from "../components/Landing/Hero.astro";
+import RoadMap from "../components/Landing/RoadMap.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -45,6 +46,7 @@ import Layout from "../layouts/Layout.astro";
         >Aprende más sobre Bienvenidas</a
       >
     </Feacture>
+    <RoadMap />
   </main>
 </Layout>
 
