[web]: added responsive to Nav

--- a/packages/new-website/src/layouts/Layout.astro
+++ b/packages/new-website/src/layouts/Layout.astro
@@ -55,6 +55,9 @@ const { title, showFooter = true } = Astro.props;
     --max-width: 1200px;
     --border-radius: 0.25rem;
     --border-radius-lg: 0.5rem;
+
+    --z-menu: 100;
+    --z-menu-button: 10;
   }
   [data-theme="light"] {
     --bg-color: #fff;
