--- a/packages/new-website/src/components/Nav.astro
+++ b/packages/new-website/src/components/Nav.astro
@@ -62,6 +62,9 @@ console.log(apiUrl);
     </div>
   </div>
 </nav>
+<x-phone>
+  <i class="ti ti-menu button--icon"></i>
+</x-phone>
 <script is:inline>
   const apiUrl = document
     .querySelector("meta[data-url-api]")
@@ -113,6 +116,14 @@ console.log(apiUrl);
         $button.style.display = "flex";
       }
     });
+  const $menu = document.querySelector("x-phone");
+  const $nav = document.querySelector("nav");
+  $menu.addEventListener("click", () => {
+    $nav.classList.toggle("show-menu");
+  });
+  $nav.addEventListener("click", (e) => {
+    $nav.classList.remove("show-menu");
+  });
 </script>
 <style lang="scss">
   nav {
@@ -122,6 +133,45 @@ console.log(apiUrl);
     gap: 0.625rem;
     padding: 1rem;
     border-bottom: 0.0625rem solid var(--font-color-50);
+    @media (max-width: 768px) {
+      display: none;
+    }
+  }
+  .show-menu {
+    display: none;
+    @media (max-width: 768px) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      padding: 40px;
+      border-radius: var(--border-radius);
+      background: var(--bg-color);
+      z-index: var(--z-menu);
+    }
+  }
+  x-phone {
+    display: none;
+    @media (max-width: 768px) {
+      display: block;
+      position: sticky;
+      top: 20px;
+      left: 40px;
+      width: min-content;
+      cursor: pointer;
+      z-index: var(--z-menu-button);
+      padding: 1rem;
+      gap: 1rem;
+      border-radius: var(--border-radius);
+      background: var(--font-color-10);
+      backdrop-filter: blur(0.25rem);
+    }
   }
   .links {
     cursor: pointer;
@@ -132,6 +182,12 @@ console.log(apiUrl);
       padding: 0.375rem;
       border-radius: var(--border-radius);
       transition: all 0.2s ease-in-out;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+      a {
+        font-size: 1.5rem;
+      }
     }
   }
   .links--actives {
@@ -153,6 +209,11 @@ console.log(apiUrl);
       background: $color;
       height: 1rem;
     }
+    @media (max-width: 768px) {
+      .line {
+        display: none;
+      }
+    }
   }
   .spacer {
     flex-grow: 1;
@@ -162,6 +223,9 @@ console.log(apiUrl);
     height: 1.5rem;
     flex-shrink: 0;
     background: var(--font-color-50);
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
   #login {
     display: flex;
