--- a/packages/new-website/src/pages/index.astro
+++ b/packages/new-website/src/pages/index.astro
@@ -52,9 +52,10 @@ import Layout from "../layouts/Layout.astro";
 
 <style>
   main {
-    margin: 80px;
+    margin: 10%;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
     align-items: center;
     line-height: 1.6;
   }
