--- a/packages/new-website/src/components/Landing/Hero.astro
+++ b/packages/new-website/src/components/Landing/Hero.astro
@@ -1,40 +1,37 @@
 ---
-import NoResponsive from "../NoResponsive.astro";
 import Tag from "../Tag.astro";
 
 const discordBot =
   "https://discord.com/oauth2/authorize?client_id=964321676651266138&permissions=8&integration_type=0&scope=bot";
 ---
 
-<NoResponsive>
-  <section class="container">
-    <article>
-      <h1>La asistente perfecta para hacer de tu servidor un lugar especial</h1>
-      <h2>
-        gestión de colores, saludos acogedores y muchas sorpresas por venir.
-      </h2>
-      <div class="button-group">
-        <a href={discordBot} class="button button--primary">
-          <i class="ti ti-brand-discord button--icon"></i>
-          <span class="button--text"> Instalar el bot </span>
-        </a>
-        <a href="/dashboard" class="button button--secondary">
-          <i class="ti ti-tools button--icon"></i>
-          <span class="button--text"> Ir a mi panel </span>
-        </a>
-      </div>
-      <Tag type="big" text="On Beta" class="rotate" />
-    </article>
-    <div class="logo">
-      <svg viewBox="0 0 280 278" fill="none">
-        <path
-          d="M21.8907 259.748C-1.75122 238.569 -3.72141 193.009 4.15924 155.822C12.2861 118.389 30.2638 88.8367 53.9057 64.2097C77.5477 39.5827 107.1 19.6349 147.488 8.55273C188.123 -2.77567 239.839 -4.9921 262.743 19.6349C285.892 44.2619 280.228 95.9785 276.78 144.247C273.578 192.763 272.347 237.584 249.444 258.763C226.295 280.188 181.474 277.479 136.16 277.726C91.0925 277.972 45.5326 280.927 21.8907 259.748Z"
-          fill="currentColor"></path>
-      </svg>
-      <img src="/logo.webp" alt="logo" />
+<section class="container">
+  <article>
+    <h1>La asistente perfecta para hacer de tu servidor un lugar especial</h1>
+    <h2>
+      gestión de colores, saludos acogedores y muchas sorpresas por venir.
+    </h2>
+    <div class="button-group">
+      <a href={discordBot} class="button button--primary">
+        <i class="ti ti-brand-discord button--icon"></i>
+        <span class="button--text"> Instalar el bot </span>
+      </a>
+      <a href="/dashboard" class="button button--secondary">
+        <i class="ti ti-tools button--icon"></i>
+        <span class="button--text"> Ir a mi panel </span>
+      </a>
     </div>
-  </section>
-</NoResponsive>
+    <Tag type="big" text="On Beta" class="rotate" />
+  </article>
+  <div class="logo">
+    <svg viewBox="0 0 280 278" fill="none">
+      <path
+        d="M21.8907 259.748C-1.75122 238.569 -3.72141 193.009 4.15924 155.822C12.2861 118.389 30.2638 88.8367 53.9057 64.2097C77.5477 39.5827 107.1 19.6349 147.488 8.55273C188.123 -2.77567 239.839 -4.9921 262.743 19.6349C285.892 44.2619 280.228 95.9785 276.78 144.247C273.578 192.763 272.347 237.584 249.444 258.763C226.295 280.188 181.474 277.479 136.16 277.726C91.0925 277.972 45.5326 280.927 21.8907 259.748Z"
+        fill="currentColor"></path>
+    </svg>
+    <img src="/logo.webp" alt="logo" />
+  </div>
+</section>
 
 <style lang="scss">
   section {
@@ -82,6 +79,22 @@ const discordBot =
     }
     h2 {
       font-weight: var(--regular);
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 1rem;
+      .button-group {
+        flex-wrap: wrap;
+      }
+      h1 {
+        font-size: 2rem;
+      }
+      h2 {
+        font-size: 1.25rem;
+      }
+      .logo {
+        width: max-content;
+      }
     }
   }
 </style>
