--- a/packages/new-website/src/pages/dashboard/guild.astro
+++ b/packages/new-website/src/pages/dashboard/guild.astro
@@ -6,5 +6,5 @@ import Layout from "../../layouts/Layout.astro";
 
 <Layout title="Guild Management">
   <h1>Guild Management</h1>
-  <Settings client:load apiUrl={import.meta.env.URL_API} />
+  <Settings client:only apiUrl={import.meta.env.URL_API} />
 </Layout>
