--- a/packages/website/src/pages/dashboard/guild/colors.astro
+++ b/packages/website/src/pages/dashboard/guild/colors.astro
@@ -1,8 +1,11 @@
 ---
 import ColorsSettings from "@components/Dashboard/Guild/ColorsSettings";
 import Layout from "@layouts/Layout.astro";
+import getPublic from "@utils/getPublic";
+
+const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
 <Layout title="Colors">
-  <ColorsSettings client:only apiUrl={import.meta.env.URL_API} />
+  <ColorsSettings client:only apiUrl={urlApi} oauthCallback={urlOathCallback} />
 </Layout>
