--- a/packages/website/src/pages/dashboard/guild.astro
+++ b/packages/website/src/pages/dashboard/guild.astro
@@ -1,10 +1,13 @@
 ---
+import getPublic from "@utils/getPublic";
 import Settings from "../../components/Dashboard/Guild/Settings";
 
 import Layout from "../../layouts/Layout.astro";
+
+const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
 <Layout title="Guild Management">
   <h1>Guild Management</h1>
-  <Settings client:only apiUrl={import.meta.env.URL_API} />
+  <Settings apiUrl={urlApi} oauthCallback={urlOathCallback} />
 </Layout>
