--- a/packages/website/src/pages/dashboard/index.astro
+++ b/packages/website/src/pages/dashboard/index.astro
@@ -1,10 +1,11 @@
 ---
+import getPublic from "@utils/getPublic";
 import ContainerGuilds from "../../components/Dashboard/ContainerGuilds";
 import Layout from "../../layouts/Layout.astro";
+const { urlApi } = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
 <Layout title="Dashboard">
-  <meta data-url-api={import.meta.env.URL_API} />
   <h1>Dashboard</h1>
-  <ContainerGuilds apiUrl={import.meta.env.URL_API} client:load />
+  <ContainerGuilds apiUrl={urlApi} client:load />
 </Layout>
