feat(docs): :sparkles: add Spanish documentation for home and color module, update navigation links

--- a/packages/website/src/components/Nav.astro
+++ b/packages/website/src/components/Nav.astro
@@ -12,7 +12,7 @@ const { urlApi, urlOathCallback, urlGithub } = getPublic(
   <x-logo></x-logo>
   <ul class="links--actives">
     <li><a href="#">Soporte</a></li>
-    <li><a href="/es/home">Wiki</a></li>
+    <li><a href="/home">Wiki</a></li>
   </ul>
   <ul class="links--inactives">
     <span>Pronto</span>
