--- a/packages/website/src/components/Landing/Contributions.astro
+++ b/packages/website/src/components/Landing/Contributions.astro
@@ -1,7 +1,7 @@
 ---
-import getPublic from "@utils/getPublic";
+import getPublic from '@utils/getPublic'
 
-const { urlDonate, urlGithub } = getPublic(import.meta.env.PUBLIC_VARIABLES);
+const { urlDonate, urlGithub } = getPublic(import.meta.env.PUBLIC_VARIABLES)
 ---
 
 <section>
