--- a/packages/website/src/components/Landing/Hero.astro
+++ b/packages/website/src/components/Landing/Hero.astro
@@ -1,8 +1,8 @@
 ---
-import Tag from "../Tag.astro";
+import Tag from '../Tag.astro'
 
 const discordBot =
-  "https://discord.com/oauth2/authorize?client_id=964321676651266138&permissions=8&integration_type=0&scope=bot";
+  'https://discord.com/oauth2/authorize?client_id=964321676651266138&permissions=8&integration_type=0&scope=bot'
 ---
 
 <section class="container">
