--- a/packages/website/src/components/Nav.astro
+++ b/packages/website/src/components/Nav.astro
@@ -1,10 +1,8 @@
 ---
-import getPublic from "@utils/getPublic";
-import LoginButton from "./Nav/LoginButton";
+import getPublic from '@utils/getPublic'
+import LoginButton from './Nav/LoginButton'
 
-const { urlApi, urlOathCallback, urlGithub } = getPublic(
-  import.meta.env.PUBLIC_VARIABLES,
-);
+const { urlApi, urlOathCallback, urlGithub } = getPublic(import.meta.env.PUBLIC_VARIABLES)
 ---
 
 <nav>
