--- a/packages/website/src/pages/dashboard/guild/colors.astro
+++ b/packages/website/src/pages/dashboard/guild/colors.astro
@@ -1,9 +1,9 @@
 ---
-import ColorsSettings from "@components/Dashboard/Guild/ColorsSettings";
-import Layout from "@layouts/Layout.astro";
-import getPublic from "@utils/getPublic";
+import ColorsSettings from '@components/Dashboard/Guild/ColorsSettings'
+import Layout from '@layouts/Layout.astro'
+import getPublic from '@utils/getPublic'
 
-const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES);
+const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES)
 ---
 
 <Layout title="Colors">
