--- a/packages/website/src/pages/dashboard/index.astro
+++ b/packages/website/src/pages/dashboard/index.astro
@@ -1,8 +1,8 @@
 ---
-import getPublic from "@utils/getPublic";
-import ContainerGuilds from "../../components/Dashboard/ContainerGuilds";
-import Layout from "../../layouts/Layout.astro";
-const { urlApi } = getPublic(import.meta.env.PUBLIC_VARIABLES);
+import getPublic from '@utils/getPublic'
+import ContainerGuilds from '../../components/Dashboard/ContainerGuilds'
+import Layout from '../../layouts/Layout.astro'
+const { urlApi } = getPublic(import.meta.env.PUBLIC_VARIABLES)
 ---
 
 <Layout title="Dashboard">
