--- a/packages/website/src/pages/index.astro
+++ b/packages/website/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Contributions from "../components/Landing/Contributions.astro";
-import Feature from "../components/Landing/Feature.astro";
-import Hero from "../components/Landing/Hero.astro";
-import RoadMap from "../components/Landing/RoadMap.astro";
-import Layout from "../layouts/Layout.astro";
+import Contributions from '../components/Landing/Contributions.astro'
+import Feature from '../components/Landing/Feature.astro'
+import Hero from '../components/Landing/Hero.astro'
+import RoadMap from '../components/Landing/RoadMap.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="Welcome to Beatriz Dono">
