--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,17 +1,13 @@
 ---
-import Nav from "../components/Nav.astro";
+import Nav from '../components/Nav.astro'
 
 interface Props {
-  title: string;
-  description?: string;
-  showFooter?: boolean;
+  title: string
+  description?: string
+  showFooter?: boolean
 }
 
-const {
-  title,
-  showFooter = true,
-  description = "Best bot for Discord, Beatriz Dono.",
-} = Astro.props as Props;
+const { title, showFooter = true, description = 'Best bot for Discord, Beatriz Dono.' } = Astro.props as Props
 ---
 
 <!doctype html>
