--- a/packages/website/src/pages/404.astro
+++ b/packages/website/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from '../layouts/Layout.astro'
 
-const title = "404 - Page Not Found";
+const title = '404 - Page Not Found'
 ---
 
 <Layout title={title}>
