--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,13 +1,17 @@
 ---
-import Nav from '../components/Nav.astro'
+import Nav from "../components/Nav/index.astro";
 
 interface Props {
-  title: string
-  description?: string
-  showFooter?: boolean
+  title: string;
+  description?: string;
+  showFooter?: boolean;
 }
 
-const { title, showFooter = true, description = 'Best bot for Discord, Beatriz Dono.' } = Astro.props as Props
+const {
+  title,
+  showFooter = true,
+  description = "Best bot for Discord, Beatriz Dono.",
+} = Astro.props as Props;
 ---
 
 <!doctype html>
@@ -43,7 +47,7 @@ const { title, showFooter = true, description = 'Best bot for Discord, Beatriz D
   :root {
     --primary-color: #ff0066;
     --secondary-color: #00ff99;
-    --bg-color: #13151a;
+    --bg-color: #121111;
     --font-color: #fff;
     --font-color-90: color-mix(in srgb, var(--font-color) 90%, transparent);
     --font-color-50: color-mix(in srgb, var(--font-color) 50%, transparent);
