--- a/packages/website/src/pages/dashboard/guild.astro
+++ b/packages/website/src/pages/dashboard/guild.astro
@@ -1,13 +1,17 @@
 ---
-import getPublic from '@utils/getPublic'
-import Settings from '../../components/Dashboard/Guild/Settings'
+import getPublic from "@utils/getPublic";
+import Settings from "../../components/Dashboard/Guild/Settings";
 
-import Layout from '../../layouts/Layout.astro'
+import Layout from "../../layouts/Layout.astro";
 
-const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES)
+const pub = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
-<Layout title="Guild Management">
+<Layout title="Guild Management" pub={pub}>
   <h1>Guild Management</h1>
-  <Settings apiUrl={urlApi} oauthCallback={urlOathCallback} client:only />
+  <Settings
+    apiUrl={pub.urlApi}
+    oauthCallback={pub.urlOathCallback}
+    client:only
+  />
 </Layout>
