--- a/packages/website/src/pages/dashboard/guild/colors.astro
+++ b/packages/website/src/pages/dashboard/guild/colors.astro
@@ -1,11 +1,15 @@
 ---
-import ColorsSettings from '@components/Dashboard/Guild/ColorsSettings'
-import Layout from '@layouts/Layout.astro'
-import getPublic from '@utils/getPublic'
+import ColorsSettings from "@components/Dashboard/Guild/ColorsSettings";
+import Layout from "@layouts/Layout.astro";
+import getPublic from "@utils/getPublic";
 
-const { urlApi, urlOathCallback } = getPublic(import.meta.env.PUBLIC_VARIABLES)
+const pub = getPublic(import.meta.env.PUBLIC_VARIABLES);
 ---
 
-<Layout title="Colors">
-  <ColorsSettings client:only apiUrl={urlApi} oauthCallback={urlOathCallback} />
+<Layout title="Colors" pub={pub}>
+  <ColorsSettings
+    client:only
+    apiUrl={pub.urlApi}
+    oauthCallback={pub.urlOathCallback}
+  />
 </Layout>
