--- a/packages/website/src/layouts/Layout.astro
+++ b/packages/website/src/layouts/Layout.astro
@@ -1,16 +1,19 @@
 ---
+import type { EnvPublic } from "@utils/getPublic";
 import Nav from "../components/Nav/index.astro";
 
 interface Props {
   title: string;
   description?: string;
   showFooter?: boolean;
+  pub: EnvPublic;
 }
 
 const {
   title,
   showFooter = true,
   description = "Best bot for Discord, Beatriz Dono.",
+  pub,
 } = Astro.props as Props;
 ---
 
@@ -29,7 +32,7 @@ const {
     <title>{title}</title>
   </head>
   <body>
-    <Nav />
+    <Nav pub={pub} />
     <slot />
     {
       showFooter && (
