--- a/packages/website/src/components/Nav/index.astro
+++ b/packages/website/src/components/Nav/index.astro
@@ -1,16 +1,19 @@
 ---
-import getPublic from "@utils/getPublic";
+import type { EnvPublic } from "@utils/getPublic";
 import LoginButton from "./LoginButton";
 import Logo from "./Logo.astro";
 import LinkDonate from "./LinkDonate.astro";
+import Button from "@components/Button.astro";
 
-const { urlApi, urlOathCallback, urlGithub, urlDonate, urlDiscord } = getPublic(
-  import.meta.env.PUBLIC_VARIABLES,
-);
+interface Props {
+  pub: EnvPublic;
+}
+
+const { pub } = Astro.props as Props;
 ---
 
 <nav>
-  <meta data-url-api={urlApi} />
+  <meta data-url-api={pub.urlApi} />
   <Logo />
   <ul class="links">
     <li><a href="/home">Wiki</a></li>
@@ -19,28 +22,22 @@ const { urlApi, urlOathCallback, urlGithub, urlDonate, urlDiscord } = getPublic(
 
   <span class="spacer"></span>
   <!-- button github -->
-  <a href={urlGithub} target="_blank" class="button button--without-text">
-    <i class="ti ti-brand-github button--icon"></i>
-  </a>
-  <a href={urlDiscord} target="_blank" class="button button--without-text">
-    <i class="ti ti-brand-discord button--icon"></i>
-  </a>
+  <Button type="only-icon" icon="discord" href={pub.urlDiscord} />
+  <Button type="only-icon" icon="github" href={pub.urlGithub} />
   <span class="line"></span>
   <!-- button light/dark mode -->
-  <button class="button button--without-text" id="button-theme">
-    <i class="ti ti-moon-stars button--icon"></i>
-  </button>
-
-  <LinkDonate kofi={urlDonate.kofi} />
-  <LoginButton apiUrl={urlApi} oauthCallback={urlOathCallback} client:only />
+  <Button type="only-icon" icon="moon" id="button-theme" />
+  <LinkDonate kofi={pub.urlDonate.kofi} />
+  <LoginButton
+    apiUrl={pub.urlApi}
+    oauthCallback={pub.urlOathCallback}
+    client:only
+  />
 </nav>
 <x-phone>
   <i class="ti ti-menu button--icon"></i>
 </x-phone>
 <script>
-  const apiUrl = document
-    .querySelector("meta[data-url-api]")
-    ?.getAttribute("data-url-api");
   const buttonTheme = document.getElementById("button-theme");
   let theme =
     document.documentElement.getAttribute("data-theme") ??
@@ -141,7 +138,7 @@ const { urlApi, urlOathCallback, urlGithub, urlDonate, urlDiscord } = getPublic(
     width: 1px;
     height: 1.5rem;
     flex-shrink: 0;
-    background: var(--font-color-50);
+    background: var(--font-color-10);
     @media (max-width: 768px) {
       display: none;
     }
