refactor(web): ♻️ update Button component icons for consistency

--- a/packages/website/src/components/Button.astro
+++ b/packages/website/src/components/Button.astro
@@ -8,9 +8,10 @@ interface Props {
 }
 const icons = {
   github: "ti ti-brand-github",
-  discord: "ti ti-brand-discord",
+  discord: "ti ti-brand-discord-filled",
   kofi: "ti ti-cup",
-  moon: "ti ti-moon-stars",
+  moon: "ti ti-moon-filled",
+  apps: "ti ti-apps-filled",
 };
 
 const { text, href, icon, type = "primary", id } = Astro.props as Props;
